--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detecção Facial</title>
-    
+
+    <link rel="stylesheet" href="/global.css">
 
     <script defer src="./face-api.min.js"></script>
     <script defer src="./main.js"></script>
-
-    <style>
-        body {
-            width: 100vw;
-            height: 100vh;
-            
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        canvas {
-            position: absolute;
-        }
-
-    </style>
 </head>
 <body>
-    <video id="video" width="720" height="560" muted></video>
+    <main class="main-contant">
+        <video id="video" width="720" height="480" muted></video>
+        <section>
+            <div class="counter-container">
+                <p style="margin: 0; margin-right: 5px;">Contagem de entradas: </p> <span id="counter"></span>
+            </div>
+            <div class="btn-container">
+                <button class="btn-prox" id="btn-prox" hidden>Próximo!</button>
+                <button class="btn-clear" id="btn-clear" >Zerar contador</button>
+            </div>
+        </section>
+    </main>
+<script>
+    let $counter = document.getElementById("counter")
+    const $btnClear = document.getElementById("btn-clear") 
+
+    setInterval(()=>{
+        $counter.innerText = localStorage.getItem('amount')
+    }, 500);
+
+    $btnClear.addEventListener('click', e => {
+        localStorage.setItem('amount', 0)
+    })
+
+
+</script>
 </body>
 </html>
